Fix smaller screen layout issues

--- a/styles.css
+++ b/styles.css
@@ -42,14 +42,13 @@ img, svg {
 
 /* ------------------ SMALLER SCREENS ------------------ */
 
-@media only screen and (min-width: 700px) {
 
     /* ------------------ CONTAINER ------------------ */
 
+
     .container {
         display: grid;
-        grid-template-columns: 200px 4fr;
-        grid-template-rows: 0.5fr 4fr;
+        grid-template-rows: 0.5fr 1fr;
         height: 100%;
     }
     
@@ -58,9 +57,6 @@ img, svg {
     .header {
         grid-column: 1 / 3;
         background-color: var(--white);
-    
-        display: grid;
-        grid-template-columns: 200px 4fr;
     }
     
     .title {
@@ -256,12 +252,13 @@ i:hover {
 .main-content {
     background-color: var(--grey);
     padding: 30px;
+    gap: 20px;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(8, 1fr);
     grid-template-rows: 330px 330px 150px 150px 450px 450px;
-    gap: 20px;
 }
+
 
 .main-content > * {
     border-radius: 10px;
@@ -276,7 +273,7 @@ i:hover {
 /* CARD 1 */
 
 .card1 {
-    grid-column: 1 / 3;
+    grid-column: span 8
 }
 
 .card1 {
@@ -326,7 +323,7 @@ i:hover {
  /* CARD 2 */
 
  .card2 {
-    grid-column: 1 / 3;
+    grid-column: span 8;
 }
 
  .card2 {
@@ -380,6 +377,10 @@ i:hover {
 
 
 /* MINI CARDS */
+
+.mini-card {
+    grid-column: span 4;
+}
 
 .mini-card i {
     font-size: 4rem;
@@ -475,7 +476,7 @@ i:hover {
 /* CARD 3*/
 
 .card3 {
-    grid-column: 1 / 3;
+    grid-column: span 8;
 
     display: flex;
     flex-direction: column;
@@ -564,7 +565,7 @@ i:hover {
 
 
 .card4 {
-    grid-column: 1 / 3;
+    grid-column: span 8;
 
     display: flex;
     flex-direction: column;
@@ -670,13 +671,6 @@ i:hover {
 
 
 
-}
-
-
-
-
-
-
 
 
 
@@ -684,15 +678,28 @@ i:hover {
 /* ------------------ DESKTOP------------------ */
 
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1000px) {
 
 /* ------------------ MAIN CONTENT------------------ */
 
+
+.container {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 0.5fr 1fr;
+    height: 100%;
+}
 
 .main-content {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: 330px 150px 450px;
+}
+
+
+.header {
+    display: grid;
+    grid-template-columns: 200px 1fr;
 }
 
 
